fix: uploaded image distortion bug

--- a/client/src/styles/LayoutDashboard.module.css
+++ b/client/src/styles/LayoutDashboard.module.css
@@ -18,8 +18,6 @@ main,
 nav,
 .user,
 .logout,
-.avatar,
-.logo,
 .add,
 label {
   display: flex;
@@ -52,16 +50,6 @@ label:hover {
   flex-direction: column;
   justify-content: space-evenly;
   align-items: flex-start;
-}
-
-.avatar,
-.logo {
-  max-width: 60px;
-  height: 60px;
-  border-radius: 50%;
-  justify-content: center;
-  align-items: center;
-  cursor: pointer;
 }
 
 .border {
